Fix - Horizontal Scroll, Adjust Sale Banner

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -25,6 +25,7 @@
 html {
 	height: 100%;
 	scroll-behavior: smooth;
+	overflow-x: hidden;
 }
 
 body {
@@ -195,10 +196,6 @@ body {
 	object-fit: cover;
 }
 
-#reviews-carousel {
-	height: 30%;
-}
-
 /* Centering Material Icon in div: */
 /* https://newbedev.com/mat-icon-does-not-center-in-its-div */
 .icon,
@@ -267,8 +264,6 @@ body {
 	background-color: var(--color-coral);
 	color: #ffffff !important;
 }
-
-
 
 /* Footer */
 #footer-container {
@@ -413,10 +408,6 @@ footer .socials ul li a:active {
 	.container {
 		max-width: 80%;
 	}
-
-	#reviews-carousel {
-		height: 350px;
-	}
 }
 
 /* Medium and up */
@@ -427,10 +418,6 @@ footer .socials ul li a:active {
 
 	body {
 		height: calc(100vh - 164px);
-	}
-
-	#reviews-carousel {
-		height: 350px;
 	}
 }
 
